// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`saveLocal 1`] = `
{
  "f": [
    [
      "type",
      "START",
    ],
  ],
}
`;

exports[`saveLocal 2`] = `
{
  "f": [
    [
      "type",
      "DONE",
    ],
  ],
}
`;

exports[`saveLocal 3`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`saveLocal 4`] = `
{
  "f": [
    [
      "type",
      "DELETE",
    ],
  ],
}
`;

exports[`saveLocal 5`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`saveLocal 6`] = `
{
  "f": [
    [
      "type",
      "DONE",
    ],
  ],
}
`;

exports[`saveLocal 7`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`saveLocal 8`] = `
[
  [
    "boxes",
    {
      "f": [
        [
          "running",
          {
            "$": "Set",
            "l": [
              {
                "r": 3,
              },
              {
                "r": 2,
              },
              {
                "r": 5,
              },
              {
                "r": 1,
              },
            ],
          },
        ],
        [
          "resume",
          {
            "r": 5,
          },
        ],
      ],
      "x": [
        {
          "f": [
            [
              "type",
              "DONE",
            ],
          ],
        },
        {
          "$": "addFlush",
          "f": [
            [
              "queue",
              [],
            ],
            [
              "$await",
              {
                "$": "Residual",
                "f": [
                  [
                    "dest",
                    [],
                  ],
                  [
                    "parent",
                    null,
                  ],
                  [
                    "state",
                    1,
                  ],
                  [
                    "value",
                    {
                      "f": [
                        [
                          "value",
                          {
                            "r": 0,
                          },
                        ],
                        [
                          "done",
                          false,
                        ],
                      ],
                    },
                  ],
                ],
              },
            ],
            [
              "$",
              {},
            ],
            [
              "_input",
              {
                "r": 2,
              },
            ],
            [
              "$step",
              8,
            ],
            [
              "$last",
              7,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
            [
              "_loop",
              {
                "r": 2,
              },
            ],
            [
              "_i",
              {
                "r": 0,
              },
            ],
          ],
        },
        {
          "$": "_data",
          "f": [
            [
              "queue",
              [],
            ],
            [
              "$await",
              null,
            ],
            [
              "$",
              {},
            ],
            [
              "$step",
              7,
            ],
            [
              "$last",
              6,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
          ],
        },
        {
          "$": "Async",
          "f": [
            [
              "dest",
              [],
            ],
            [
              "state",
              0,
            ],
            [
              "value",
              {
                "$": "undefined",
              },
            ],
            [
              "$",
              {},
            ],
            [
              "$await",
              {
                "r": 4,
              },
            ],
            [
              "_f",
              {
                "f": [
                  [
                    "_data",
                    {
                      "$": "saveLocalData",
                    },
                  ],
                ],
              },
            ],
            [
              "$step",
              9,
            ],
            [
              "cont",
              {
                "$": "Residual",
                "f": [
                  [
                    "dest",
                    [
                      {
                        "$": "saveLocalExit",
                      },
                    ],
                  ],
                  [
                    "parent",
                    {
                      "r": 3,
                    },
                  ],
                  [
                    "state",
                    0,
                  ],
                ],
              },
            ],
            [
              "$last",
              8,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
            [
              "_loop",
              {
                "r": 5,
              },
            ],
            [
              "_i",
              {
                "r": 0,
              },
            ],
          ],
        },
        {
          "$": "Residual",
          "f": [
            [
              "dest",
              [
                {
                  "r": 3,
                },
              ],
            ],
            [
              "parent",
              null,
            ],
            [
              "state",
              0,
            ],
          ],
        },
        {
          "$": "saveLocal",
          "f": [
            [
              "queue",
              [
                {
                  "r": 4,
                },
              ],
            ],
            [
              "$await",
              {
                "$": "Idle",
              },
            ],
            [
              "$",
              {},
            ],
            [
              "_input",
              {
                "r": 2,
              },
            ],
            [
              "$step",
              13,
            ],
            [
              "$last",
              13,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
            [
              "_loop",
              {
                "r": 1,
              },
            ],
            [
              "_i",
              {
                "r": 0,
              },
            ],
            [
              "_frame",
              {
                "$": "undefined",
              },
            ],
          ],
        },
      ],
    },
  ],
  [
    "boxes",
    {
      "f": [
        [
          "running",
          {
            "$": "Set",
            "l": [
              {
                "r": 3,
              },
              {
                "r": 2,
              },
              {
                "r": 5,
              },
              {
                "r": 1,
              },
            ],
          },
        ],
        [
          "resume",
          {
            "r": 5,
          },
        ],
      ],
      "x": [
        {
          "f": [
            [
              "type",
              "DELETE",
            ],
          ],
        },
        {
          "$": "addFlush",
          "f": [
            [
              "queue",
              [],
            ],
            [
              "$await",
              {
                "$": "Residual",
                "f": [
                  [
                    "dest",
                    [],
                  ],
                  [
                    "parent",
                    null,
                  ],
                  [
                    "state",
                    1,
                  ],
                  [
                    "value",
                    {
                      "f": [
                        [
                          "value",
                          {
                            "r": 0,
                          },
                        ],
                        [
                          "done",
                          false,
                        ],
                      ],
                    },
                  ],
                ],
              },
            ],
            [
              "$",
              {},
            ],
            [
              "_input",
              {
                "r": 2,
              },
            ],
            [
              "$step",
              8,
            ],
            [
              "$last",
              7,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
            [
              "_loop",
              {
                "r": 2,
              },
            ],
            [
              "_i",
              {
                "r": 0,
              },
            ],
          ],
        },
        {
          "$": "_data",
          "f": [
            [
              "queue",
              [],
            ],
            [
              "$await",
              null,
            ],
            [
              "$",
              {},
            ],
            [
              "$step",
              8,
            ],
            [
              "$last",
              7,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
          ],
        },
        {
          "$": "Async",
          "f": [
            [
              "dest",
              [],
            ],
            [
              "state",
              0,
            ],
            [
              "value",
              {
                "$": "undefined",
              },
            ],
            [
              "$",
              {},
            ],
            [
              "$await",
              {
                "r": 4,
              },
            ],
            [
              "_f",
              {
                "f": [
                  [
                    "_data",
                    {
                      "$": "saveLocalData",
                    },
                  ],
                ],
              },
            ],
            [
              "$step",
              9,
            ],
            [
              "cont",
              {
                "$": "Residual",
                "f": [
                  [
                    "dest",
                    [
                      {
                        "$": "saveLocalExit",
                      },
                    ],
                  ],
                  [
                    "parent",
                    {
                      "r": 3,
                    },
                  ],
                  [
                    "state",
                    0,
                  ],
                ],
              },
            ],
            [
              "$last",
              8,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
            [
              "_loop",
              {
                "r": 5,
              },
            ],
            [
              "_i",
              {
                "r": 0,
              },
            ],
          ],
        },
        {
          "$": "Residual",
          "f": [
            [
              "dest",
              [
                {
                  "r": 3,
                },
              ],
            ],
            [
              "parent",
              null,
            ],
            [
              "state",
              0,
            ],
          ],
        },
        {
          "$": "saveLocal",
          "f": [
            [
              "queue",
              [
                {
                  "r": 4,
                },
              ],
            ],
            [
              "$await",
              {
                "$": "Idle",
              },
            ],
            [
              "$",
              {},
            ],
            [
              "_input",
              {
                "r": 2,
              },
            ],
            [
              "$step",
              13,
            ],
            [
              "$last",
              13,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
            [
              "_loop",
              {
                "r": 1,
              },
            ],
            [
              "_i",
              {
                "r": 0,
              },
            ],
            [
              "_frame",
              {
                "$": "undefined",
              },
            ],
          ],
        },
      ],
    },
  ],
  [
    "boxes",
    {
      "f": [
        [
          "running",
          {
            "$": "Set",
            "l": [
              {
                "r": 3,
              },
              {
                "r": 2,
              },
              {
                "r": 5,
              },
              {
                "r": 1,
              },
            ],
          },
        ],
        [
          "resume",
          {
            "r": 5,
          },
        ],
      ],
      "x": [
        {
          "f": [
            [
              "type",
              "DONE",
            ],
          ],
        },
        {
          "$": "addFlush",
          "f": [
            [
              "queue",
              [],
            ],
            [
              "$await",
              {
                "$": "Residual",
                "f": [
                  [
                    "dest",
                    [],
                  ],
                  [
                    "parent",
                    null,
                  ],
                  [
                    "state",
                    1,
                  ],
                  [
                    "value",
                    {
                      "f": [
                        [
                          "value",
                          {
                            "r": 0,
                          },
                        ],
                        [
                          "done",
                          false,
                        ],
                      ],
                    },
                  ],
                ],
              },
            ],
            [
              "$",
              {},
            ],
            [
              "_input",
              {
                "r": 2,
              },
            ],
            [
              "$step",
              8,
            ],
            [
              "$last",
              7,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
            [
              "_loop",
              {
                "r": 2,
              },
            ],
            [
              "_i",
              {
                "r": 0,
              },
            ],
          ],
        },
        {
          "$": "_data",
          "f": [
            [
              "queue",
              [],
            ],
            [
              "$await",
              null,
            ],
            [
              "$",
              {},
            ],
            [
              "$step",
              9,
            ],
            [
              "$last",
              8,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
          ],
        },
        {
          "$": "Async",
          "f": [
            [
              "dest",
              [],
            ],
            [
              "state",
              0,
            ],
            [
              "value",
              {
                "$": "undefined",
              },
            ],
            [
              "$",
              {},
            ],
            [
              "$await",
              {
                "r": 4,
              },
            ],
            [
              "_f",
              {
                "f": [
                  [
                    "_data",
                    {
                      "$": "saveLocalData",
                    },
                  ],
                ],
              },
            ],
            [
              "$step",
              9,
            ],
            [
              "cont",
              {
                "$": "Residual",
                "f": [
                  [
                    "dest",
                    [
                      {
                        "$": "saveLocalExit",
                      },
                    ],
                  ],
                  [
                    "parent",
                    {
                      "r": 3,
                    },
                  ],
                  [
                    "state",
                    0,
                  ],
                ],
              },
            ],
            [
              "$last",
              8,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
            [
              "_loop",
              {
                "r": 5,
              },
            ],
            [
              "_i",
              {
                "r": 0,
              },
            ],
          ],
        },
        {
          "$": "Residual",
          "f": [
            [
              "dest",
              [
                {
                  "r": 3,
                },
              ],
            ],
            [
              "parent",
              null,
            ],
            [
              "state",
              0,
            ],
          ],
        },
        {
          "$": "saveLocal",
          "f": [
            [
              "queue",
              [
                {
                  "r": 4,
                },
              ],
            ],
            [
              "$await",
              {
                "$": "Idle",
              },
            ],
            [
              "$",
              {},
            ],
            [
              "_input",
              {
                "r": 2,
              },
            ],
            [
              "$step",
              13,
            ],
            [
              "$last",
              13,
            ],
            [
              "$arg",
              {
                "$": "undefined",
              },
            ],
            [
              "_loop",
              {
                "r": 1,
              },
            ],
            [
              "_i",
              {
                "r": 0,
              },
            ],
            [
              "_frame",
              {
                "$": "undefined",
              },
            ],
          ],
        },
      ],
    },
  ],
]
`;
